Eclipse1/SalesforceCI/ Enterprise/objects/Course_Category_Association__c.object
<CustomObject>
    <description>A junction object to allow multiple categories to be applied to multiple courses, and vice-versa.</description>
    <fields>
        <fullName>CYS_Category__c</fullName>
        <description>The category.</description>
        <label>CYS Category</label>
        <referenceTo>CYS_Category__c</referenceTo>
        <relationshipLabel>Course</relationshipLabel>
        <relationshipName>Course_Category_Associations_Cat</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ComboID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External ID used for updates.
CourseSFID_CategorySFID</description>
        <externalId>true</externalId>
        <label>ComboID</label>
        <length>45</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Training_Course__c</fullName>
        <description>The Course.</description>
        <label>Training Course</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>TYS_TrainingCourse__c.Course_Type__c</field>
                <operation>equals</operation>
                <value>course</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>TYS_TrainingCourse__c</referenceTo>
        <relationshipLabel>Category</relationshipLabel>
        <relationshipName>Course_Category_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Course Category Association</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Course Category Association ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Category Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>